fix: place logo on top of title in header on smaller screens to fix overlap issue

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -39,6 +39,22 @@ h1 {
     margin: 0 auto;
 }
 
+//position logo on top of title on smaller screens to avoid overlap
+@media only screen and (max-width: 540px) {
+    header {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+}
+// position logo on left of header on larger screens
+@media only screen and (min-width: 541px) {
+    .logo-holder {
+        position: absolute;
+    }
+}
+
+
 // Footer 
 footer a {
     // margin-right: 10px;
